--- a/databases/feedback/replica/Dockerfile
+++ b/databases/feedback/replica/Dockerfile
@@ -1,7 +1,7 @@
 FROM mysql:9.1.0
 
-COPY ./ssl/ /etc/mysql/ssl/
+COPY ./ssl/ /etc/mysql/certs/
 
-RUN chown -R mysql:mysql /etc/mysql/ssl/ && chmod 600 /etc/mysql/ssl/*
+RUN chown -R mysql:mysql /etc/mysql/certs/ && chmod 600 /etc/mysql/certs/*
 
-CMD ["mysqld", "--server-id=2", "--log-bin=mysql-bin", "--relay-log=mysql-relay", "--read-only=ON", "--ssl-ca=/etc/mysql/ssl/ca-cert.pem", "--ssl-cert=/etc/mysql/ssl/server-cert.pem", "--ssl-key=/etc/mysql/ssl/server-key.pem"]
+CMD ["mysqld", "--require_secure_transport=ON", "--server-id=2", "--log-bin=mysql-bin", "--relay-log=mysql-relay", "--read-only=ON", "--ssl-ca=/etc/mysql/certs/ca.crt", "--ssl-cert=/etc/mysql/certs/db-feedback-replica.crt", "--ssl-key=/etc/mysql/certs/db-feedback-replica.key"]
