--- a/databases/gacha/proxy/config-inactive.cnf
+++ b/databases/gacha/proxy/config-inactive.cnf
@@ -1,3 +1,5 @@
+datadir="/var/lib/proxysql"
+
 admin_variables=
 {
 	admin_credentials="admin:admin;radmin:radmin"
@@ -6,17 +8,19 @@ admin_variables=
 
 mysql_servers =
 (
-    { address="service_gacha_db_primary", port=3306, hostgroup=1, max_connections=300 }
+    { address="service_gacha_db_primary", port=3306, hostgroup=1, max_connections=300, use_ssl=1 },
+    { address="service_gacha_db_replica", port=3306, hostgroup=2, max_connections=300, use_ssl=1 }
 )
 
 mysql_users =
 (
-    { username="gacha_test_user", password="gacha_test_password", default_hostgroup=1, max_connections=300 }
+    { username="gacha_test_user", password="gacha_test_password", default_hostgroup=1, max_connections=300, use_ssl=1 }
 )
 
 mysql_query_rules =
 (
-    { rule_id=1, active=1, match_pattern=".*", destination_hostgroup=1, apply=1 }
+    { rule_id=1, active=1, match_pattern="^SELECT .*", destination_hostgroup=2, apply=1 },
+    { rule_id=2, active=1, match_pattern=".*", destination_hostgroup=1, apply=1 }
 )
 
 mysql_variables=
@@ -45,7 +49,8 @@ mysql_variables=
 	sessions_sort=true
 	connect_retries_on_failure=10
 
-    ssl_p2s_key="/etc/proxysql/ssl/server-key.pem"
-    ssl_p2s_cert="/etc/proxysql/ssl/server-cert.pem"
-    ssl_p2s_ca="/etc/proxysql/ssl/ca-cert.pem"
+	ssl_p2s_ca="/var/lib/proxysql/proxysql-ca.pem"
+	ssl_p2s_cert="/var/lib/proxysql/proxysql-cert.pem"
+	ssl_p2s_key="/var/lib/proxysql/proxysql-key.pem"
+	ssl_p2s_cipher="ECDHE-RSA-AES256-SHA"
 }
