--- a/databases/auction/proxy/config-inactive.cnf
+++ b/databases/auction/proxy/config-inactive.cnf
@@ -8,7 +8,8 @@ admin_variables=
 
 mysql_servers =
 (
-    { address="service_auction_db_primary", port=3306, hostgroup=1, max_connections=300, use_ssl=1 }
+    { address="service_auction_db_primary", port=3306, hostgroup=1, max_connections=300, use_ssl=1 },
+    { address="service_auction_db_replica", port=3306, hostgroup=2, max_connections=300, use_ssl=1 }
 )
 
 mysql_users =
@@ -18,7 +19,8 @@ mysql_users =
 
 mysql_query_rules =
 (
-    { rule_id=1, active=1, match_pattern=".*", destination_hostgroup=1, apply=1 }
+    { rule_id=1, active=1, match_pattern="^SELECT .*", destination_hostgroup=2, apply=1 },
+    { rule_id=2, active=1, match_pattern=".*", destination_hostgroup=1, apply=1 }
 )
 
 mysql_variables=
