--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -611,19 +611,16 @@ services:
     container_name: unipi-gatchaandgames-service_profile_db_primary
     env_file: ./databases/profile/primary/primary.env
     volumes:
-    - ./databases/profile/primary/init.sql:/docker-entrypoint-initdb.d/init.sql
-    - ./databases/profile/primary/mock_data.sql:/docker-entrypoint-initdb.d/mock_data.sql
-
-    - ./databases/profile/primary/ssl:/etc/mysql/ssl
-    - service_profile_db_primary_data:/var/lib/mysql
+      - ./databases/profile/primary/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./databases/profile/primary/mock_data.sql:/docker-entrypoint-initdb.d/mock_data.sql
     networks:
-    - public_gachaandgames_network
+      - public_gachaandgames_network
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       start_period: 10s
       interval: 3s
       timeout: 2s
-      retries: 15
+      retries: 20
     restart: always
   
   # service_profile_db_replica:
@@ -631,11 +628,9 @@ services:
   #   container_name: unipi-gatchaandgames-service_profile_db_replica
   #   env_file: ./databases/profile/replica/replica.env
   #   volumes:
-  #   - ./databases/profile/replica/init.sql:/docker-entrypoint-initdb.d/init.sql
-  #   - ./databases/profile/replica/ssl:/etc/mysql/ssl
-  #   - service_profile_db_replica_data:/var/lib/mysql
+  #     - ./databases/profile/replica/init.sql:/docker-entrypoint-initdb.d/init.sql
   #   networks:
-  #   - public_gachaandgames_network
+  #     - public_gachaandgames_network
   #   depends_on:
   #     service_profile_db_primary:
   #       condition: service_healthy
@@ -651,21 +646,21 @@ services:
     image: proxysql/proxysql:2.7.1
     container_name: unipi-gatchaandgames-service_profile_db_proxy
     volumes:
-    - ./databases/profile/proxy/config.cnf:/etc/proxysql.cnf
-    - ./databases/profile/proxy/ssl:/etc/proxysql/ssl
+      - ./databases/profile/proxy/config.cnf:/etc/proxysql.cnf
+      - ./databases/profile/proxy/ssl:/var/lib/proxysql
     networks:
-    - public_gachaandgames_network
+      - public_gachaandgames_network
+    depends_on:
+      service_profile_db_primary:
+        condition: service_healthy
+      # service_profile_db_replica:
+      #   condition: service_healthy
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-P", "6032", "-uradmin", "-pradmin"]
       start_period: 5s
       interval: 3s
       timeout: 2s
       retries: 20
-    depends_on:
-      service_profile_db_primary:
-        condition: service_healthy
-      # service_profile_db_replica:
-      #   condition: service_healthy
     restart: always
 
   ########################## PVP
@@ -695,19 +690,16 @@ services:
     container_name: unipi-gatchaandgames-service_pvp_db_primary
     env_file: ./databases/pvp/primary/primary.env
     volumes:
-    - ./databases/pvp/primary/init.sql:/docker-entrypoint-initdb.d/init.sql
-    - ./databases/pvp/primary/mock_data.sql:/docker-entrypoint-initdb.d/mock_data.sql
-
-    - ./databases/pvp/primary/ssl:/etc/mysql/ssl
-    - service_pvp_db_primary_data:/var/lib/mysql
+      - ./databases/pvp/primary/init.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./databases/pvp/primary/mock_data.sql:/docker-entrypoint-initdb.d/mock_data.sql
     networks:
-    - public_gachaandgames_network
+      - public_gachaandgames_network
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       start_period: 10s
       interval: 3s
       timeout: 2s
-      retries: 15
+      retries: 20
     restart: always
   
   # service_pvp_db_replica:
@@ -715,11 +707,9 @@ services:
   #   container_name: unipi-gatchaandgames-service_pvp_db_replica
   #   env_file: ./databases/pvp/replica/replica.env
   #   volumes:
-  #   - ./databases/pvp/replica/init.sql:/docker-entrypoint-initdb.d/init.sql
-  #   - ./databases/pvp/replica/ssl:/etc/mysql/ssl
-  #   - service_pvp_db_replica_data:/var/lib/mysql
+  #     - ./databases/pvp/replica/init.sql:/docker-entrypoint-initdb.d/init.sql
   #   networks:
-  #   - public_gachaandgames_network
+  #     - public_gachaandgames_network
   #   depends_on:
   #     service_pvp_db_primary:
   #       condition: service_healthy
@@ -735,21 +725,21 @@ services:
     image: proxysql/proxysql:2.7.1
     container_name: unipi-gatchaandgames-service_pvp_db_proxy
     volumes:
-    - ./databases/pvp/proxy/config.cnf:/etc/proxysql.cnf
-    - ./databases/pvp/proxy/ssl:/etc/proxysql/ssl
+      - ./databases/pvp/proxy/config.cnf:/etc/proxysql.cnf
+      - ./databases/pvp/proxy/ssl:/var/lib/proxysql
     networks:
-    - public_gachaandgames_network
+      - public_gachaandgames_network
+    depends_on:
+      service_pvp_db_primary:
+        condition: service_healthy
+      # service_pvp_db_replica:
+      #   condition: service_healthy
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "127.0.0.1", "-P", "6032", "-uradmin", "-pradmin"]
       start_period: 5s
       interval: 3s
       timeout: 2s
       retries: 20
-    depends_on:
-      service_pvp_db_primary:
-        condition: service_healthy
-      # service_pvp_db_replica:
-      #   condition: service_healthy
     restart: always
 
   ######### STACK ELK
@@ -799,9 +789,3 @@ networks:
 volumes:
   loki_data:
   grafana_data:
-  service_profile_db_proxy_data:
-  service_profile_db_primary_data:
-  service_profile_db_replica_data:
-  service_pvp_db_proxy_data:
-  service_pvp_db_primary_data:
-  service_pvp_db_replica_data:
