chores: removed port from stack elk feat(readme): updated, and with new images

--- a/databases/auth/replica/Dockerfile
+++ b/databases/auth/replica/Dockerfile
@@ -4,4 +4,4 @@ COPY ./ssl/ /etc/mysql/certs/
 
 RUN chown -R mysql:mysql /etc/mysql/certs/ && chmod 600 /etc/mysql/certs/*
 
-CMD ["mysqld", "--require_secure_transport=ON", "--server-id=2", "--log-bin=mysql-bin", "--relay-log=mysql-relay", "--read-only=ON", "--ssl-ca=/etc/mysql/certs/ca.crt", "--ssl-cert=/etc/mysql/certs/db-auth-replica.crt", "--ssl-key=/etc/mysql/certs/db-auth-replica.key"]
+CMD ["mysqld", "--max_connections=500", "--require_secure_transport=ON", "--server-id=2", "--log-bin=mysql-bin", "--relay-log=mysql-relay", "--read-only=ON", "--ssl-ca=/etc/mysql/certs/ca.crt", "--ssl-cert=/etc/mysql/certs/db-auth-replica.crt", "--ssl-key=/etc/mysql/certs/db-auth-replica.key"]
