feat(security): added 404 error for internal requests. removed environment variables

--- a/api_gateway_private/api_gateway.conf
+++ b/api_gateway_private/api_gateway.conf
@@ -37,6 +37,10 @@ http {
             add_header Content-Type text/plain;
         }
 
+        location ^~ /admin/internal/ {
+            return 404;
+        }
+
         location ^~ /admin/ {
             proxy_pass https://service_admin/admin/;
             proxy_set_header Host $host;
@@ -44,7 +48,11 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
         }
-    
+
+        location ^~ /auth/internal/ {
+            return 404;
+        }
+
         location ^~ /auth/ {
             proxy_pass https://service_auth/auth/;
             proxy_set_header Host $host;
