--- a/api_gateway_public/api_gateway.conf
+++ b/api_gateway_public/api_gateway.conf
@@ -66,6 +66,10 @@ http {
             proxy_set_header X-Forwarded-Host $host;
         }
 
+        location ^~ /profile/internal/ {
+            return 404;
+        }
+
         location ^~ /profile/ {
             proxy_pass https://service_profile/profile/;
             proxy_set_header Host $host;
@@ -73,6 +77,10 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $host;
+        }
+
+        location ^~ /auth/internal/ {
+            return 404;
         }
 
         location ^~ /auth/ {
@@ -85,6 +93,10 @@ http {
             proxy_set_header X-Source-Gateway Gateway-Public;
         }
 
+        location ^~ /auction/internal/ {
+            return 404;
+        }
+
         location ^~ /auction/ {
             proxy_pass https://service_auction/auction/;
             proxy_set_header Host $host;
@@ -92,6 +104,10 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $host;
+        }
+
+        location ^~ /currency/internal/ {
+            return 404;
         }
 
         location ^~ /currency/ {
@@ -103,6 +119,10 @@ http {
             proxy_set_header X-Forwarded-Host $host;
         }
 
+        location ^~ /feedback/internal/ {
+            return 404;
+        }
+
         location ^~ /feedback/ {
             proxy_pass https://service_feedback/feedback/;
             proxy_set_header Host $host;
@@ -110,6 +130,10 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $host;
+        }
+
+        location ^~ /gacha/internal/ {
+            return 404;
         }
 
         location ^~ /gacha/ {
@@ -121,6 +145,10 @@ http {
             proxy_set_header X-Forwarded-Host $host;
         }
 
+        location ^~ /inventory/internal/ {
+            return 404;
+        }
+
         location ^~ /inventory/ {
             proxy_pass https://service_inventory/inventory/;
             proxy_set_header Host $host;
@@ -129,6 +157,10 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
             proxy_set_header X-Forwarded-Host $host;
             proxy_set_header X-Forwarded-Host $host;
+        }
+
+        location ^~ /pvp/internal/ {
+            return 404;
         }
 
         location ^~ /pvp/ {
